tests/paczka1/small_fuzzy/25340217.err
Error in line 3: XhFkY5bNFN S881 17,3
Error in line 9: 6Lnfp1 S126 13,0
